@@ -1,3 +1,7 @@
+2004-05-12  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl (observe): allow observe of 'proc'
+
 2004-03-20  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl (::tkcon::EvalSocketEvent): correctly handle socket
